...
    <fragment
        android:id="@+id/logoutFragment"
        android:name="com.oneseed.zachet.ui.authentication.LogoutFragment"
        android:label="fragment_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/chatsFragment"
        android:name="com.oneseed.zachet.ui.chats.ChatsFragment"
        android:label="fragment_chats"
        tools:layout="@layout/fragment_chats" />
    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.oneseed.zachet.ui.ScheduleFragment"
...
