...
    android:backgroundTint="@color/light_grey_background"
    android:fitsSystemWindows="true"
    tools:context=".activities.IndividualChatActivity">


    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/message_edittext"
...
        android:id="@+id/messagesProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/messagesRcView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/messagesRcView"
...
