...
    <string name="code">Код</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="change_password">Смена пароля</string>
    <string name="change_email">Поменять адрес электронной почты</string>
    <string name="github">GitHub</string>
    <string name="telegram">Telegram</string>
    <string name="nameStepan">Немченко Степан</string>
    <string name="nameSofia">Сохина Софья</string>
    <string name="zero">0</string>
    <string name="onlyDarkTheme">Принудительная тёмная тема</string>
    <string name="menuIsRight">menuIsRight</string>
    <string name="menuMove">Меню справа</string>
    <string name="scheduleSample">monday;11:40;Г-703, проф. Горюшкина Н.Е.;Информационные технологии в ресторанной деятельности (лк);13:20;Г-203а, преп. Волобуев В.В.;Ресторанное дело (пр);15:00;Г-1б, доц. Абушенкова М.В.;Управление персоналом на предприятиях гостеприимства (пр);tuesday;11:40;Г-210, доц. Алпеева Е.А.;Экономическая культура и финансовая грамотность;13:20;Г-5, доц. Соловьянова М.В.;
...
