...
                    android:src="@drawable/ic_baseline_help_outline_24"
                    android:visibility="invisible"
                    app:tint="@color/blue" />
            </LinearLayout>

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/settings_edittext"
...
                    android:src="@drawable/ic_baseline_help_outline_24"
                    android:visibility="invisible"
                    app:tint="@color/blue" />
            </LinearLayout>

            <EditText
                android:id="@+id/surnameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/settings_edittext"
...
                android:background="@drawable/spinner_backgr"
                android:entries="@array/languages"
                android:paddingStart="8dp" />


            <Button
                android:id="@+id/saveSettingsBtn"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/save"
                android:textAllCaps="false"
...
